# setup-cursor

./: .cursorignore  .cursorindexingignore  .cursorrules  .gitignore  LICENSE  README.md  REPORT.md  create-release.ps1  cursorkit.ps1  install-from-anywhere.ps1  install-global.ps1  install-one-liner.ps1  main.py  package.json  pyproject.toml  requirements.txt  run.ps1  setup-cursor-portable.ps1  setup-cursor-profile.ps1  setup-cursor.cmd  setup-cursor.psd1  setup-cursor.psm1  setup-cursor.winget-manifest.yaml  test-setup.ps1
.cursor/rules/: INCIDENTS.md  apply-report.mdc  issue-reporting.mdc
.cursor/rules/diagnostics/: RULE.md
.cursor/rules/issue-reporting-and-apply-report/: RULE.md
.cursor/rules/python-3-14/: RULE.md
.cursor/skills/doctor/: SKILL.md
precursor/: .cursorignore  .gitignore  DOCUMENTATION.md  FILE_TREE.md  README.md  REPORT.md  SETUP_PROMPT.md  biome.json  package.json  precursor.json  precursor.ps1  precursor.schema.json  tsconfig.json
precursor/.cursor/: mcp.json
precursor/.cursor/rules/: python.mdc  web.mdc  windows-systems-and-toolchain.mdc
precursor/.github/workflows/: precursor.yml  python.yml  web.yml
precursor/.precursor/mcp/: server.ts
precursor/src/: backup.ts  ci.ts  cli.ts  commands.ts  config.ts  detector.test.ts  detector.ts  doctor.ts  hooks.ts  index.ts  knowledge.ts  merge.test.ts  merge.ts  report.ts  scaffold.ts  secrets.ts  state.test.ts  state.ts  system.ts  toolchain.ts  verification.ts
